err/corejet.core.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/corejet'...
Listing './lib/python3.5/site-packages/corejet/core'...
Listing './lib/python3.5/site-packages/corejet/core/locales'...
Listing './lib/python3.5/site-packages/corejet/core/locales/en'...
Listing './lib/python3.5/site-packages/corejet/core/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/corejet/core/locales/fi'...
Listing './lib/python3.5/site-packages/corejet/core/locales/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/corejet/core/scripts'...
Compiling './lib/python3.5/site-packages/corejet/core/scripts/corejet2py.py'...
***   File "./lib/python3.5/site-packages/corejet/core/scripts/corejet2py.py", line 83
    print xslt(report_tree)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/corejet/core/tests'...
Listing './lib/python3.5/site-packages/corejet/core/xslt'...
Listing './lib/python3.5/site-packages/corejet.core-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/linecache2'...
Listing './lib/python3.5/site-packages/linecache2/tests'...
Listing './lib/python3.5/site-packages/linecache2-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/traceback2'...
Listing './lib/python3.5/site-packages/traceback2/tests'...
Listing './lib/python3.5/site-packages/traceback2-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/unittest2'...
Listing './lib/python3.5/site-packages/unittest2/test'...
Listing './lib/python3.5/site-packages/unittest2-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/schema'...
Listing './lib/python3.5/site-packages/zope/schema/tests'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.schema-4.5.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
